# api-samples

./: .gitignore  README.md
administration/: README.md
authentication/: README.md
authentication/oauth2-code/: .env-code-template  README.md
authentication/oauth2-password/: .env-password-template  README.md
authentication/oauth2-saml/: README.md  app.js  package-lock.json  package.json
data-changes-query/: .env.visier-auth  main.py
data-intake/: README.md
data-intake/ddi/: README.md
data-intake/planning-data-load/: .env  README.md  main.py  planSchema.py  plan_schema.py  requirements.txt  source.csv
ds-round-trip/: .env.ds-round-trip  README.md  api.py  main.ipynb  model.py  pipeline.py  pyproject.toml  readme.md  requirements.txt  visier_api.py
dv-export/python/: .env  .env.dv-export  .env.visier-auth  README.md  constants.py  data_store.py  dv_export.py  dv_export_model.py  main.py  requirements.txt
dv-query-history/: data_store.py  dv_changes_fetcher.py  history_fetcher.py  main.py  settings.json
planning/plan-administration/: .env.example  .env.sample  .gitignore  README.md  main.py  plan_schema.py  requirements.txt
sample-application/baselayer/: .eslintrc.yml  README.md  package.json
snapshot-recorder/: .env.snapshot-recorder  .env.time-machine  README.md  main.py  requirements.txt
snapshot-recorder/queries/: event-metrics.json  gender-headcount-joblevel.json  gender-resignation-joblevel.json  (+1 more)
time-machine/: .env.time-machine  .env.visier-auth  README.md  data_downloader.py  data_uploader.py  main.py  requirements.txt
(+132 files in other folders)
